# cpp_sample_web_scraping_app

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  config.json  docker-compose.yml  run.sh
ci/: build.sh  build_and_test.sh  coverage.sh  deliver.sh  get_project_name.sh  get_project_version.sh  install_ci_requisites.sh  sonar.sh  test.sh
ci/custom/: Dockerfile  ci_requisites.sh  get_ci_requisites.sh  get_docker_from_image.sh  get_docker_image_run.sh  get_project_name.sh  get_project_version.sh  internal_build.sh  internal_coverage.sh  internal_sonar.sh  internal_test.sh
ci/docker/: Dockerfile
ext/: Makefile.inc  build.sh  deps_utils.sh  get.sh  prepare_deps.sh
resources/: config.json  config.yaml
resources/db/: migrate.sh
resources/db/migration/: V001__DDL.sql
src/: main.cpp
src/bs/config/: config.cpp  config.hpp  config_loader.cpp  config_loader.hpp  download_cfg.hpp  downloader_cfg.cpp  downloader_cfg.hpp  repository_cfg.cpp  repository_cfg.hpp  scheduler_cfg.cpp  scheduler_cfg.hpp
src/bs/domain/: ticket.cpp  ticket.hpp
src/bs/download/: download_factory.cpp  download_factory.hpp  ticket_downloader.cpp  ticket_downloader.hpp
src/bs/downloader/: ticket_downloader.cpp  ticket_downloader.hpp
src/bs/infra/: db.cpp  db.hpp  postgres_db.cpp  postgres_db.hpp  postgres_ticket_repository.cpp  postgres_ticket_repository.hpp
src/bs/infrastructure/: postgres_db.cpp  postgres_db.hpp
src/bs/repository/: repository.hpp  ticket_repository.hpp
src/bs/scheduler/: command.hpp  scheduler.cpp  scheduler.hpp
src/bs/serializer/: bitstamp_ticket_parser.hpp  ticket_parser.hpp  ticket_serializer.hpp
src/scraper/application/config/: config.hpp  config_loader.hpp  download_config.hpp  http_config.hpp  repository_config.hpp
src/scraper/application/usecases/: get_tickets.cpp  get_tickets.hpp
src/scraper/domain/: ticket.hpp
src/scraper/domain/aggregates/tickets/: ticket.hpp
src/scraper/domain/api/: ticket_api.cpp  ticket_api.hpp
src/scraper/domain/repositories/: ticket_repository.hpp
src/scraper/infrastructure/config/: config_loader.cpp  config_loader.hpp  config_loader_creator.cpp  config_loader_creator.hpp  json_config_loader.cpp  json_config_loader.hpp  yaml_config_loader.cpp  yaml_config_loader.hpp
src/scraper/infrastructure/database/: db.cpp  db.hpp  postgres_db.hpp  postgres_ticket_repository.cpp  postgres_ticket_repository.hpp
src/scraper/infrastructure/download/: download_factory.cpp  download_factory.hpp  ticket_downloader.cpp  ticket_downloader.hpp
src/scraper/infrastructure/factory/: factory_store.hpp
src/scraper/infrastructure/http/: http_server.cpp  http_server.hpp
src/scraper/infrastructure/http/handlers/: error_handler.cpp  error_handler.hpp  health_handler.cpp  health_handler.hpp  ticket_handler.cpp  ticket_handler.hpp
src/scraper/infrastructure/repository/: repository.hpp  repository_factory.hpp  repository_source.hpp
src/scraper/infrastructure/repository/postgresql/: postgresql_factory.cpp  postgresql_factory.hpp  postgresql_repository.cpp  postgresql_repository.hpp  postgresql_repository_source.cpp  postgresql_repository_source.hpp  postgresql_source.cpp  postgresql_source.hpp  postgresql_ticket_repository.cpp  postgresql_ticket_repository.hpp
src/scraper/infrastructure/schedule/: command_recurrence.hpp  interval_runner.cpp  interval_runner.hpp  scheduler.cpp  scheduler.hpp
src/scraper/infrastructure/serialize/: bitstamp_ticket_parser.cpp  bitstamp_ticket_parser.hpp  cex_ticket_parser.cpp  cex_ticket_parser.hpp  parser_factory.cpp  parser_factory.hpp  ticket_parser.hpp
src/scraper/repository/: ticket_repository.hpp
src/test/: main.cpp  ticket.cpp
